eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplebank-api-deployment
  labels:
    app: simplebank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplebank-api
  template:
    metadata:
      labels:
        app: simplebank-api
    spec:
      containers:
      - name: simplebank-api
        image: 637423483202.dkr.ecr.us-west-1.amazonaws.com/simplebank:latest
        ports:
        - containerPort: 8080
