eks/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplebank-ingress-grpc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - host: "gapi.cris-simplebank.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simplebank-api-service
            port:
              number: 90
  tls:
    - hosts: 
      - api.cris-simplebank.com
      secretName: simplebank-gapi-cert
