eks/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplebank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.cris-simplebank.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simplebank-api-service
            port:
              number: 80
  tls:
    - hosts: 
      - api.cris-simplebank.com
      secretName: simplebank-api-cert
